content hash fix, merge, start get changesAssetgraph

--- a/packages/examples/incremental/package.json
+++ b/packages/examples/incremental/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "PARCEL_WORKERS=0 parcel src/index.js --incremental",
+    "start": "PARCEL_WORKERS=0 parcel src/index.js",
     "start:clean": "rm -rf .parcel-cache dist && yarn start"
   },
   "devDependencies": {
