--- a/packages/examples/simple/package.json
+++ b/packages/examples/simple/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "demo": "PARCEL_WORKERS=0 parcel src/index.js",
+    "inc-demo": "PARCEL_WORKERS=0 parcel src/index.js --incremental",
     "clean-demo": "rm -rf .parcel-cache dist && yarn demo"
   },
   "devDependencies": {
