--- a/packages/transformers/babel/package.json
+++ b/packages/transformers/babel/package.json
@@ -20,15 +20,12 @@
     "parcel": "^2.0.0-beta.1"
   },
   "dependencies": {
+    "@babel/core": "^7.12.0",
     "@babel/generator": "^7.9.0",
     "@babel/helper-compilation-targets": "^7.8.4",
     "@babel/plugin-transform-flow-strip-types": "^7.0.0",
-    "@babel/plugin-transform-typescript": "^7.4.5",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
     "@babel/traverse": "^7.0.0",
     "@parcel/babel-ast-utils": "2.0.0-beta.2",
-    "@parcel/babel-preset-env": "2.0.0-beta.2",
     "@parcel/plugin": "2.0.0-beta.2",
     "@parcel/source-map": "2.0.0-alpha.4.21",
     "@parcel/utils": "2.0.0-beta.2",
@@ -39,9 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
+    "@babel/preset-env": "^7.0.0",
     "@parcel/types": "2.0.0-beta.2"
-  },
-  "peerDependencies": {
-    "@babel/core": "^7.12.0"
   }
 }
